<resources>
    <string name="app_name">Counter</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_now">Not a member? Click here to register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome">Welcome to Counter</string>
    <string name="create_your_lobby">Create your own lobby and invite your friends!</string>
    <string name="create_lobby">CREATE LOBBY</string>
    <string name="or_join_lobby">OR join your friend\'s lobby. You just need an invite code!</string>
    <string name="join_lobby">JOIN LOBBY</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_the_lobby_code">Enter the lobby code below</string>
    <string name="confirm">confirm</string>
    <string name="enter_a_name_for_your_lobby">Enter a name for your lobby</string>
    <string name="example_code">123456</string>
    <string name="example_name">Example name</string>
    <string name="welcome_message">Hi, %1$s</string>
</resources>